--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.no-cursor {
+  pointer-events: none;
+  cursor: default;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
